spec/tests/error/error-1.4.tcl
# Test: error in conditional - error not reached
if {0} {
    error "this should not happen"
}
puts "ok"
